objects/Lead_Interest_Track__c.object
<CustomObject>
    <description>Tracking the Lead Interest Fields Change</description>
    <label>Lead Interest Tack</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Lead Interest History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Interest Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Interest Track</relationshipLabel>
        <relationshipName>Lead_Interest_Track</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>